# ollama-utils

./: .gitignore  PRIVACY.md  README.md  SECURITY.md  ollama_maintenance_gui.py  ollama_utils_gui.py  ollama_utils_test.py  ollama_utils_update.py  pyproject.toml  test_ollama_models.py  tz_ollama_utils_gui.py  tz_ollama_utils_gui.spec  tz_ollama_utils_test.py  tz_ollama_utils_update.py  update_ollama_models.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs-or-ux.yml  feature_request.yml
.github/workflows/: build-release.yml
assets/icons/: tz_icon_v2.icns  tz_ollama_utils_icon.icns
assets/images/: html-head-snippet.txt  site.webmanifest
scripts/: generate_windows_icon.py
src/ollama_maintenance/: common.py  gui.py  test_models.py  update_models.py
src/ollama_utils/: __init__.py  common.py  gui.py  test_models.py  update_models.py
src/tz_ollama_utils/: __init__.py  common.py  gui.py  search_models.py  test_models.py  update_models.py
tests/: test_common.py  test_gui.py  test_search_models.py  test_test_models.py
