[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-utils"
version = "0.3.1"
description = "Local CLI and GUI utilities for updating, inventorying, and smoke-testing Ollama models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Matthew Craig" }
]
keywords = ["ollama", "llm", "models", "inventory", "utilities"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/taggedzi/ollama-utils"
"Bug Tracker" = "https://github.com/taggedzi/ollama-utils/issues"

[project.optional-dependencies]
build = [
  "pyinstaller>=6.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.scripts]
ollama-utils-update = "ollama_utils.update_models:main"
ollama-utils-test = "ollama_utils.test_models:main"
ollama-utils-gui = "ollama_utils.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
