[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tz-ollama-utils"
version = "0.4.2"
description = "Local CLI and GUI utilities for updating, inventorying, and smoke-testing Ollama models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Matthew Craig" }
]
keywords = ["ollama", "llm", "models", "inventory", "utilities"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/taggedzi/tz-ollama-utils"
"Bug Tracker" = "https://github.com/taggedzi/tz-ollama-utils/issues"

[project.optional-dependencies]
build = [
  "pyinstaller>=6.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.scripts]
tz-ollama-utils-update = "tz_ollama_utils.update_models:main"
tz-ollama-utils-test = "tz_ollama_utils.test_models:main"
tz-ollama-utils-gui = "tz_ollama_utils.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tz_ollama_utils = ["assets/icons/*.png", "assets/icons/*.ico"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["F401"]
